--- a/Terminal/src/main/res/layout/activity_main.xml
+++ b/Terminal/src/main/res/layout/activity_main.xml
@@ -25,13 +25,15 @@
             android:layout_height="wrap_content"
             android:text="@string/titleGetTicket" />
 
-        <Button
-            android:id="@+id/buttonGetTicketList"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/titleGetTicketList" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="3dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:background="#ff2f38ff" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -53,36 +55,5 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Number window: "
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/textViewNumberWindow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="3dp"
-        android:background="#ff2f38ff"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"/>
-
-    <ListView
-        android:id="@+id/listViewTicketList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
